--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -62,11 +62,11 @@
 }
 
 .about-description {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   line-height: 1.8;
   color: #4b5563;
   margin-bottom: 1.5rem;
-  font-family: "DM Serif Text", serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .name-highlight {
@@ -95,11 +95,11 @@
 }
 
 .about-subtext {
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.7;
   color: #6b7280;
   margin-bottom: 2rem;
-  font-family: "DM Serif Text", serif;
+  font-family: "Rubik", sans-serif;
   font-style: italic;
 }
 
