--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -15,7 +15,12 @@
   text-align: center;
   margin-bottom: 3rem;
   color: #1f2937;
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "Antonio", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
 }
 
 .projects-grid {
@@ -61,9 +66,12 @@
 
 .project-name {
   font-size: 1.25rem;
-  font-weight: 600;
   margin-bottom: 0.75rem;
   color: #1f2937;
+  transition: all 0.3s ease;
+  font-family: "Rubik", sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 .project-description {
@@ -72,6 +80,9 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .project-tags {
@@ -124,6 +135,7 @@
   max-height: 90vh;
   overflow: hidden;
   position: relative;
+  font-family: "Rubik", sans-serif;
 }
 
 .project-modal-close {
