--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,4 +1,3 @@
-
 .hero-section {
   position: relative;
   width: 100%;
@@ -26,29 +25,31 @@
   letter-spacing: 25px;
   color: rgb(255, 0, 0);
   transform: scaleY(1.5);
-  text-shadow: 8px 8px 0px rgba(0,0,0,0.1);
+  text-shadow: 8px 8px 0px rgba(0, 0, 0, 0.1);
 }
 
 .portfolio-subtitle {
   position: absolute;
   right: 35px;
-  bottom: 80px;
+  bottom: 0;
   font-family: "Bebas Neue", sans-serif;
   font-size: 100px;
   color: rgb(0, 0, 0);
-  text-shadow: 4px 4px 0px rgba(255,255,255,0.3);
+  text-shadow: 4px 4px 0px rgba(255, 255, 255, 0.3);
 }
 
 .hero-image-container {
   position: absolute;
-  bottom: 0;
-  width: 80%;
-  height: 100%;
+  bottom: 10px;
+  height: 750px;
+  width: 45%;
+  overflow: hidden;
   z-index: 1;
 }
 
 .hero-image {
   object-fit: cover;
+  object-position: top;
   width: 100%;
   height: 100%;
   user-select: none;
@@ -67,7 +68,7 @@
   left: 35px;
   bottom: 80px;
   z-index: 10;
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .download-btn {
@@ -95,7 +96,7 @@
   background-color: #ea580c;
   transform: translateY(-3px);
   box-shadow: 0 6px 20px rgba(249, 115, 22, 0.4);
-  border-color: rgba(255,255,255,0.2);
+  border-color: rgba(255, 255, 255, 0.2);
 }
 
 .char {
@@ -118,4 +119,3 @@
   border-radius: 20px;
   backdrop-filter: blur(5px);
 }
-
