--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,21 +4,41 @@
 @import "tailwindcss";
 
 :root {
-  color-scheme: light;
+  color-scheme: light dark;
 
-  --color-bg: #ffffff;
-  --color-text: #141517;
+  --color-white: #dadada;
+  --color-black: #141517;
   --color-accent: #ff3c00;
   --color-subtle-gray: #F2F4F7;
+  --color-muted: #f1f1f1;
 
   --scroll-track: #f1f1f1;
   --scroll-thumb: #888;
   --scroll-thumb-hover: #555;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --scroll-track: #2d2d2d;
+    --scroll-thumb: #555;
+    --scroll-thumb-hover: #888;
+  }
+}
+
 @layer base {
   html {
     scroll-behavior: smooth;
+    background-color: var(--color-white);
+    color: var(--color-black);
+  }
+
+  .dark {
+    background-color: var(--color-black);
+    color: var(--color-white);
+  }
+
+  .dark .bg-subtle-gray {
+    background-color: var(--color-subtle-gray);
   }
 
   .font-bebas {
